# SIH-grand-finale

./: ARIMA-model.ipynb  README.md  arima-plus.ipynb  file2CSV-2.py  model-for-sdlc.ipynb  pdf2xlsx.py  pyproject.toml  sarima.ipynb  split-pdf.py  xls2csv.py
scraping and conversion/: TrimFiles.py  powerquery.m
testing/: 04.01.16_NLDC_PSP.xlsx  arima-plus.py  testing.py
testing/Converted_XLSX/: 02.01.14_NLDC_PSP.xlsx
