[tool.poetry]
name = "sih2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pypdf2 = "^3.0.1"
bs4 = "^0.0.2"
google = "^3.0.0"
google-cloud-bigquery = "^3.27.0"
db-dtypes = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
